@@ -1,5 +1,5 @@
 [IGDB]
-Access Token=hu6kgnuw7r3q2k6szr58z2q9wvpiyj
-Access Token Expires=2021,1,3,3,4,39
-Custom Fields=igdb,pegi
+Access Token=57ymnd8u2scs33ka4zc4plvb3u5rm8
+Access Token Expires=2022,5,26,17,27,18.461
+Custom Fields=igdb,pegi,screenshot
 Uuid={4384a123-1fdb-4f2b-9af5-87349d22bb01}
