@@ -1,3 +1,7 @@
+2022-03-26  Robby Stephenson  <robby@periapsis.org>
+
+	* Added screenshot field for IGDB source.
+
 2022-03-23  Robby Stephenson  <robby@periapsis.org>
 
 	* Added screenshot field for MobyGames source.
